[tool.poetry]
name = "tz-bw"
version = "0.1.0"
description = ""
authors = ["Mihaylov Igor <multitasked@yandex.ru>"]
readme = "README.md"
packages = [{include = "tz_bw"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
requests = "^2.31.0"
sqlalchemy = "^2.0.22"
pydantic-settings = "^2.0.3"
alembic = "^1.12.0"
asyncpg = "^0.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
